--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <script>
       function check() {
         var info = window.screen.width;
-        console.log(info);
         if (info >= 1279) {
           window.location.href = "pc.html";
         }
@@ -96,9 +95,9 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/index/CSS.webp" alt="Cascading Style Sheets" />
+              <img class="card-img-bottom" src="./src/index/CSS_HTML.webp" alt="Cascading Style Sheets & HyperText Markup Language" />
               <div class="card-body">
-                <h5 class="card-title">CSS</h5>
+                <h5 class="card-title">HTML/CSS</h5>
                 <p class="card-text">Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%">40% &nbsp;</div>
@@ -108,10 +107,10 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/index/HTML.webp" alt="HyperText Markup Language" />
+              <img class="card-img-bottom" src="./src/index/PHP_NODEJS.webp" alt="HyperText Markup Language" />
               <div class="card-body">
-                <h5 class="card-title">HTML</h5>
-                <p class="card-text">Язык гипертекстовой разметки страницы. Он используется для того, чтобы дать браузеру понять, как нужно отображать загруженный сайт.</p>
+                <h5 class="card-title">PHP/Node.js</h5>
+                <p class="card-text">PHP - C-подобный скриптовый язык, применяемый для разработки веб-приложений. Node или Node.js — программная платформа, превращающая JavaScript в язык общего назначения.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 45%">45% &nbsp;</div>
                 </div>
@@ -160,7 +159,7 @@
       <div class="card-deck">
         <div class="row">
           <div class="col-sm-4 d-inline-flex">
-            <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
+            <div class="card" style="width: 100%; margin-bottom: 1rem">
               <img class="card-img-bottom" loading="lazy" src="./src/index/cppSharp.webp" alt="C++ / C#" />
               <div class="card-body">
                 <h5 class="card-title">C++ / C#</h5>
@@ -172,7 +171,7 @@
             </div>
           </div>
           <div class="col-sm-4 d-inline-flex">
-            <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
+            <div class="card" style="width: 100%; margin-bottom: 1rem">
               <img class="card-img-bottom" loading="lazy" src="./src/index/bd.webp" alt="Structured Query Language" />
               <div class="card-body">
                 <h5 class="card-title">SQL</h5>
@@ -184,11 +183,23 @@
             </div>
           </div>
           <div class="col-sm-4 d-inline-flex">
-            <div class="card" style="width: 100%; margin: 0 auto; float: center; margin-bottom: 10px">
+            <div class="card" style="width: 100%; margin-bottom: 1rem">
               <img class="card-img-bottom" loading="lazy" src="./src/index/Python.webp" alt="Python" />
               <div class="card-body">
                 <h5 class="card-title">Python</h5>
                 <p class="card-text">Высокоуровневый язык программирования общего назначения, написанный на C.</p>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wip" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">work in progress... &nbsp;</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 d-inline-flex">
+            <div class="card" style="width: 100%; margin-bottom: 1rem">
+              <img class="card-img-bottom" loading="lazy" src="./src/index/ReactJs.webp" alt="Python" />
+              <div class="card-body">
+                <h5 class="card-title">React.js</h5>
+                <p class="card-text">React — это JavaScript-библиотека для создания пользовательских интерфейсов.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wip" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">work in progress... &nbsp;</div>
                 </div>
