--- a/pc.html
+++ b/pc.html
@@ -105,7 +105,7 @@
           <a class="bx bxl-twitter btn" href="https://twitter.com/arsenij_kotikov"> </a>
         </span>
       </div>
-      <button class="btn bx bx-color-fill btn1" style="margin-left: 1rem"></button>
+      <button class="btn bx bx-moon btn1" style="margin-left: 1rem"></button>
     </nav>
 
     <div class="hello_container bd">
