--- a/pc.html
+++ b/pc.html
@@ -233,7 +233,9 @@
         <h1 class="Contenth1 text-center dynamic" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Мой стек</h1>
         <hr />
       </div>
+
       <div class="dsc-flex-container">
+        <img src="./src/pc_index/stack.svg" class="dsc-stacklike-img" />
         <div class="dsc" style="margin-top: -0.5rem">
           <i class="bx bxs-file-js" style="font-size: 10rem; float: left; background: none"></i>
           <div class="dsc-inner">
