--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <img class="card-img-bottom" src="./src/index/CSS_HTML.webp" alt="Cascading Style Sheets & HyperText Markup Language" />
               <div class="card-body">
                 <h5 class="card-title">HTML/CSS</h5>
-                <p class="card-text">Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
+                <p class="card-text">HTML — Язык гипертекстовой разметки страницы. Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%">40% &nbsp;</div>
                 </div>
@@ -107,7 +107,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-              <img class="card-img-bottom" src="./src/index/PHP_NODEJS.webp" alt="HyperText Markup Language" />
+              <img class="card-img-bottom" src="./src/index/PHP_NODEJS.webp" alt="Hypertext Preprocessor & Node.js" />
               <div class="card-body">
                 <h5 class="card-title">PHP/Node.js</h5>
                 <p class="card-text">PHP - C-подобный скриптовый язык, применяемый для разработки веб-приложений. Node или Node.js — программная платформа, превращающая JavaScript в язык общего назначения.</p>
@@ -196,7 +196,7 @@
           </div>
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%; margin-bottom: 1rem">
-              <img class="card-img-bottom" loading="lazy" src="./src/index/ReactJs.webp" alt="Python" />
+              <img class="card-img-bottom" loading="lazy" src="./src/index/ReactJs.webp" alt="React.js" />
               <div class="card-body">
                 <h5 class="card-title">React.js</h5>
                 <p class="card-text">React — это JavaScript-библиотека для создания пользовательских интерфейсов.</p>
