--- a/pc.html
+++ b/pc.html
@@ -233,9 +233,43 @@
         <h1 class="Contenth1 text-center dynamic" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Мой стек</h1>
         <hr />
       </div>
-
+      <div class="row row-cols-1 row-cols-md-5 g-8">
+        <div class="col">
+          <div class="card noback">
+            <img src="./src/pc_index/design.svg" class="card-img-top" alt="..." />
+            <div class="card-body circled">
+              <p class="card-text">Создание макета</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card noback">
+            <img src="./src/pc_index/ref.svg" class="card-img-top ref" alt="..." />
+          </div>
+        </div>
+        <div class="col">
+          <div class="card noback">
+            <img src="./src/pc_index/markup.svg" class="card-img-top" alt="..." />
+            <div class="card-body circled">
+              <p class="card-text">Вёрстка, HTML/CSS</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card noback">
+            <img src="./src/pc_index/ref.svg" class="card-img-top ref" alt="..." />
+          </div>
+        </div>
+        <div class="col">
+          <div class="card noback">
+            <img src="./src/pc_index/code.svg" class="card-img-top" alt="..." />
+            <div class="card-body circled">
+              <p class="card-text">Логика, JS/PHP</p>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="dsc-flex-container">
-        <img src="./src/pc_index/stack.svg" class="dsc-stacklike-img" />
         <div class="dsc" style="margin-top: -0.5rem">
           <i class="bx bxs-file-js" style="font-size: 10rem; float: left; background: none"></i>
           <div class="dsc-inner">
