--- a/pc.html
+++ b/pc.html
@@ -233,7 +233,7 @@
         <h1 class="Contenth1 text-center dynamic" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Мой стек</h1>
         <hr />
       </div>
-      <div class="row row-cols-1 row-cols-md-5 g-8">
+      <div class="row row-cols-1 row-cols-md-5 g-8" style="margin-bottom: 2rem">
         <div class="col">
           <div class="card noback">
             <img src="./src/pc_index/design.svg" class="card-img-top" alt="..." />
