--- a/pc.html
+++ b/pc.html
@@ -238,20 +238,22 @@
           <div class="card noback">
             <img src="./src/pc_index/design.svg" class="card-img-top" alt="..." />
             <div class="card-body circled">
-              <p class="card-text">Создание макета</p>
+              <h5 class="card-title">Макет</h5>
+              <p class="card-text">Figma & Photoshop</p>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card noback">
+          <div class="card h-100 noback">
             <img src="./src/pc_index/ref.svg" class="card-img-top ref" alt="..." />
           </div>
         </div>
         <div class="col">
-          <div class="card noback">
+          <div class="card h-100 noback">
             <img src="./src/pc_index/markup.svg" class="card-img-top" alt="..." />
             <div class="card-body circled">
-              <p class="card-text">Вёрстка, HTML/CSS</p>
+              <h5 class="card-title">Вёрстка</h5>
+              <p class="card-text">HTML & CSS</p>
             </div>
           </div>
         </div>
@@ -261,10 +263,11 @@
           </div>
         </div>
         <div class="col">
-          <div class="card noback">
+          <div class="card h-100 noback">
             <img src="./src/pc_index/code.svg" class="card-img-top" alt="..." />
             <div class="card-body circled">
-              <p class="card-text">Логика, JS/PHP</p>
+              <h5 class="card-title">Логика</h5>
+              <p class="card-text">JS & PHP</p>
             </div>
           </div>
         </div>
