--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
     <link href="https://kotikov.pages.dev/css/404.css" rel="stylesheet" />
     <title>404 Not Found</title>
   </head>
-  <body style="background-color: #1d1d1d" class="progress-bar-striped progress-bar-animated">
+  <body style="background: #1d1d1d" class="progress-bar-striped progress-bar-animated">
     <div style="margin: 1rem; margin-top: 10rem">
       <div class="col-sm-4 m-auto">
         <div class="card" style="width: 90%; max-width: 50vh; margin: 0 auto; float: center">
