--- a/IE-warning.html
+++ b/IE-warning.html
@@ -29,7 +29,7 @@
   </script>
   <style>
     html {
-      background-color: #1d1d1d;
+      background: #1d1d1d;
       color: white;
       overflow: hidden;
       margin: 40px;
