--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         msieversion();
       };
     </script>
+    <script>
+      function check() {
+        var info = window.screen.width;
+        if (info >= 1279) {
+          window.location.href = "pc.html";
+        }
+      }
+      check();
+    </script>
 
     <meta name="viewport" content="width=device-width" initial-scale="1.0" minimum-scale="1.0" maximum-scale="1.0" user-scalable="no" />
     <meta property="og:locale" content="ru_RU" />
