--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
               <img class="card-img-top" src="./src/index/JS.webp" alt="Javascript" />
               <div class="card-body">
-                <h5 class="card-title">Javascript</h5>
+                <div class="card-title">
+                  <h5>Javascript</h5>
+                </div>
                 <p class="card-text">JavaScript это язык, который позволяет вам применять сложные вещи на web странице.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 15%">15% &nbsp;</div>
@@ -117,7 +119,9 @@
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
               <img class="card-img-bottom" src="./src/index/CSS_HTML.webp" alt="Cascading Style Sheets & HyperText Markup Language" />
               <div class="card-body">
-                <h5 class="card-title">HTML/CSS</h5>
+                <div class="card-title">
+                  <h5>HTML/CSS</h5>
+                </div>
                 <p class="card-text">HTML — Язык гипертекстовой разметки страницы. Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%">40% &nbsp;</div>
@@ -129,7 +133,9 @@
             <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
               <img class="card-img-bottom" src="./src/index/PHP_NODEJS.webp" alt="Hypertext Preprocessor & Node.js" />
               <div class="card-body">
-                <h5 class="card-title">PHP/Node.js</h5>
+                <div class="card-title">
+                  <h5>PHP/Node.js</h5>
+                </div>
                 <p class="card-text">PHP - C-подобный скриптовый язык, применяемый для разработки веб-приложений. Node или Node.js — программная платформа, превращающая JavaScript в язык общего назначения.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 45%">45% &nbsp;</div>
@@ -182,7 +188,9 @@
             <div class="card" style="width: 100%; margin-bottom: 1rem">
               <img class="card-img-bottom" loading="lazy" src="./src/index/cppSharp.webp" alt="C++ / C#" />
               <div class="card-body">
-                <h5 class="card-title">C++ / C#</h5>
+                <div class="card-title">
+                  <h5>C++ / C#</h5>
+                </div>
                 <p class="card-text">Объекто-ориентированные языки программирования промежуточного уровня.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wip" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">work in progress... &nbsp;</div>
@@ -194,7 +202,9 @@
             <div class="card" style="width: 100%; margin-bottom: 1rem">
               <img class="card-img-bottom" loading="lazy" src="./src/index/bd.webp" alt="Structured Query Language" />
               <div class="card-body">
-                <h5 class="card-title">SQL</h5>
+                <div class="card-title">
+                  <h5>SQL</h5>
+                </div>
                 <p class="card-text">Декларативный язык программирования, применяемый для управления данными в реляционной базе данных.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wip" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">work in progress... &nbsp;</div>
@@ -206,7 +216,9 @@
             <div class="card" style="width: 100%; margin-bottom: 1rem">
               <img class="card-img-bottom" loading="lazy" src="./src/index/Python.webp" alt="Python" />
               <div class="card-body">
-                <h5 class="card-title">Python</h5>
+                <div class="card-title">
+                  <h5>Python</h5>
+                </div>
                 <p class="card-text">Высокоуровневый язык программирования общего назначения, написанный на C.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wip" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">work in progress... &nbsp;</div>
@@ -218,7 +230,9 @@
             <div class="card" style="width: 100%; margin-bottom: 1rem">
               <img class="card-img-bottom" loading="lazy" src="./src/index/ReactJs.webp" alt="React.js" />
               <div class="card-body">
-                <h5 class="card-title">React.js</h5>
+                <div class="card-title">
+                  <h5>React.js</h5>
+                </div>
                 <p class="card-text">React — это JavaScript-библиотека для создания пользовательских интерфейсов.</p>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wip" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">work in progress... &nbsp;</div>
@@ -292,7 +306,9 @@
               <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
                 <img class="card-img-top" src="./src/index/like.webp" alt="просто пикча" />
                 <div class="card-body">
-                  <h5 class="card-title">Понравился сайт? :D</h5>
+                  <div class="card-title">
+                    <h5>Понравился сайт? :D</h5>
+                  </div>
                   <p class="card-text">У него открытый исходный код, который размещён на GitHub.</p>
                 </div>
               </div>
@@ -302,7 +318,9 @@
                 <a href="https://github.com/kotru21/kotikov" style="text-decoration: none">
                   <img class="card-img-bottom" loading="lazy" src="./src/index/gh.webp" alt="GitHub preview pic" />
                   <div class="card-body">
-                    <h5 class="card-title">Репозиторий Github</h5>
+                    <div class="card-title">
+                      <h5>Репозиторий Github</h5>
+                    </div>
                     <p class="card-text">Жмякни сюда. Все исходники находятся здесь :)</p>
                   </div>
                 </a>
@@ -357,8 +375,8 @@
                   <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
                     <img class="card-img-bottom" loading="lazy" src="./src/index/inst.webp" alt="Основной аккаунт." />
                     <div class="card-body">
-                      <h5 class="card-title-special">Instagram</h5>
-                      <a href="https://instagram.com/arsenij_kotikov" class="btn btn-outline-primary bettertouch" style="float: right; margin-top: -1rem">Проверить</a>
+                      <div class="card-title card-title-special"><h5>Instagram</h5></div>
+                      <a href="https://instagram.com/arsenij_kotikov" class="btn btn-outline-primary bettertouch" style="float: right">Проверить</a>
                       <p class="card-text-special">Основной аккаунт.</p>
                     </div>
                   </div>
@@ -369,8 +387,8 @@
                   <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
                     <img class="card-img-bottom" loading="lazy" src="./src/index/capy-inst.webp" alt="Фотошопы капибар." />
                     <div class="card-body">
-                      <h5 class="card-title-special">Instagram</h5>
-                      <a href="https://instagram.com/somecringe.psd" class="btn btn-outline-primary bettertouch" style="float: right; margin-top: -1rem">Проверить</a>
+                      <div class="card-title card-title-special"><h5>Instagram</h5></div>
+                      <a href="https://instagram.com/somecringe.psd" class="btn btn-outline-primary bettertouch" style="float: right">Проверить</a>
                       <p class="card-text-special">Фотошопы капибар.</p>
                     </div>
                   </div>
@@ -381,8 +399,8 @@
                   <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
                     <img class="card-img-bottom" loading="lazy" src="./src/index/twitch.webp" alt="Twitch" />
                     <div class="card-body">
-                      <h5 class="card-title-special">Twitch</h5>
-                      <a href="https://twitch.tv/kotru12" class="btn btn-outline-primary bettertouch" style="float: right; margin-top: -1rem">Проверить</a>
+                      <div class="card-title card-title-special"><h5>Twitch</h5></div>
+                      <a href="https://twitch.tv/kotru12" class="btn btn-outline-primary bettertouch" style="float: right">Проверить</a>
                       <p class="card-text-special">Зачем? Пусть будет.</p>
                     </div>
                   </div>
