--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="card-deck">
           <div class="row">
             <div class="col-sm-4 d-inline-flex">
-              <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
+              <div class="card card-special">
                 <img class="card-img-top" src="./src/index/like.webp" alt="просто пикча" />
                 <div class="card-body">
                   <div class="card-title">
@@ -314,7 +314,7 @@
               </div>
             </div>
             <div class="col-sm-8 d-inline-flex">
-              <div class="card linked" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
+              <div class="card card-special linked">
                 <a href="https://github.com/kotru21/kotikov" style="text-decoration: none">
                   <img class="card-img-bottom" loading="lazy" src="./src/index/gh.webp" alt="GitHub preview pic" />
                   <div class="card-body">
